[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/CharacterSheetSubpages/TransactionLog/MoneyEntry.gd" type="Script" id=1]
[ext_resource path="res://src/UI/CharacterSheetSubpages/SubpageBlocks/ReadableLineEdit.gd" type="Script" id=2]

[node name="MoneyEntry" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="IRLEdit" type="LineEdit" parent="."]
margin_top = 528.0
margin_right = 120.0
margin_bottom = 552.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1

[node name="Transaction" type="VSeparator" parent="."]
margin_left = 124.0
margin_right = 129.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="TransactionEdit" type="LineEdit" parent="."]
margin_left = 133.0
margin_top = 528.0
margin_right = 1511.0
margin_bottom = 552.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
align = 1

[node name="cp" type="VSeparator" parent="."]
margin_left = 1515.0
margin_right = 1520.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="cpEdit" type="LineEdit" parent="."]
margin_left = 1524.0
margin_top = 528.0
margin_right = 1584.0
margin_bottom = 552.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
script = ExtResource( 2 )

[node name="sp" type="VSeparator" parent="."]
margin_left = 1588.0
margin_right = 1593.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="spEdit" type="LineEdit" parent="."]
margin_left = 1597.0
margin_top = 528.0
margin_right = 1657.0
margin_bottom = 552.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
script = ExtResource( 2 )

[node name="ep" type="VSeparator" parent="."]
margin_left = 1661.0
margin_right = 1666.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="epEdit" type="LineEdit" parent="."]
margin_left = 1670.0
margin_top = 528.0
margin_right = 1730.0
margin_bottom = 552.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
script = ExtResource( 2 )

[node name="gp" type="VSeparator" parent="."]
margin_left = 1734.0
margin_right = 1739.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="gpEdit" type="LineEdit" parent="."]
margin_left = 1743.0
margin_top = 528.0
margin_right = 1803.0
margin_bottom = 552.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
script = ExtResource( 2 )

[node name="pp" type="VSeparator" parent="."]
margin_left = 1807.0
margin_right = 1812.0
margin_bottom = 1080.0
rect_min_size = Vector2( 5, 0 )

[node name="ppEdit" type="LineEdit" parent="."]
margin_left = 1816.0
margin_top = 528.0
margin_right = 1876.0
margin_bottom = 552.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 0
size_flags_vertical = 4
align = 1
script = ExtResource( 2 )

[node name="ButtonSpacer" type="VSeparator" parent="."]
margin_left = 1880.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 40, 0 )

[connection signal="text_changed" from="TransactionEdit" to="." method="_on_TransactionEdit_text_changed"]
[connection signal="text_changed" from="cpEdit" to="." method="_on_cpEdit_text_changed"]
[connection signal="text_changed" from="spEdit" to="." method="_on_spEdit_text_changed"]
[connection signal="text_changed" from="epEdit" to="." method="_on_epEdit_text_changed"]
[connection signal="text_changed" from="gpEdit" to="." method="_on_gpEdit_text_changed"]
[connection signal="text_changed" from="ppEdit" to="." method="_on_ppEdit_text_changed"]
